# PixPulse

./: .env  FYP.md  YueMotion.txt  config.py  db.sqlite3  main.py  manage.py  models.py  models.sql  pyproject.toml
PixPulse/: asgi.py  settings.py  urls.py  wsgi.py
base/: models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_user_is_staff_user_is_superuser.py
base/templates/base/: groot.html  home.html
routers/: auth.py  comment.py  friend.py  like.py  media.py  post.py  test.py  user.py
templates/: main.html  nav.html
utils/: dbconn.py
